[package]
name = "rust_tbrowser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "^0.3.1"
rand = "0.8.4"
rand_distr = "^0.4.3"
rand_xorshift = "*"
num-traits = "*"
clap = "2"
# failure = "0.1"
root-io = { version="0.3"}
prettyplease = "0.1"
syn = "1"
tokio = { version = "1", features = ["full"] }
root-ls = "*"

alice-open-data = { version="0.5" }
bitflags = "1.0.0"
failure = "0.1.5"
flate2 = "^1"
futures = "0.3"
lzma-rs = "0.1.1"
quote = "0.3.15"
reqwest = "0.10"
uuid = "0.8.2"
lz4-compress = "0.1.1"

[dependencies.nom]
version = "^5"
